fix image covering text on home tag

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1632,7 +1632,7 @@ input, select, textarea {
 	}
 
 		.image img {
-			display: block;
+			/* display: block; */
 			width: 100%;
 		}
 
